# Correct-Elevation-Strava

./: .gitignore  Activities.csv  PRUEBASAUL  README.md  TERMINAR.bat  config.py  correct_elevation.py  cycling_activities_to_correct.txt  data.ipynb  get_ids_database.py  lint.sh  loco.py  main.py  main2.py  main_activities.py  prueba.py  pruebas.py  pyproject.toml  requirements.txt  scrap.py  setup.cfg  setup.py  stava.txt  strava copy.py  strava.py  strava_elevation_correction.py  strava_elevation_correction_OOP.py  strava_elevation_correction_copy.py  summary.csv  summary_elev_0.csv  test_get_ids_from_database.py  test_summary.py
.github/workflows/: actions.yml
correct_elevation/: strava_elevation_correction_copy.py
some tests/: prueba.py
src/: __init__.py
src/correct_elevation/: __init__.py  correct_activity.py  correct_elevation.py  credentials.py  get_activity_url.py  get_latest_activities.py  is_indoor_cycling.py  login_strava.py  run.py  strava.py  strava_activity copy.py  strava_activity.py  strava_activity_copy.py  strava_elevation_correction.py  strava_elevation_correction_OOP copy.py  strava_elevation_correction_OOP.py  strava_elevation_correction_copy.py  strava_login.py  strava_login_correct.py  strava_login_elevation.py
src/correct_elevation - copia/: correct_elevation.py  get_activity_url.py  login_strava.py  run.py  strava.py  strava_elevation_correction.py  strava_elevation_correction_OOP copy.py
src/strava_API/: GetLastActivities.py  StravaFetcher.py  __init__.py  access_token.py  generate_credentials.py  get_oauth_code.py  ids_to_correct.py  refresh_token.py
src/strava_API/activities_management/: API_request.py  API_request_activities.py  activity_api_request.py  activity_fetcher.py  api_get_request.py  filter_activities.py  get_all_activities.py  get_last_activities.py  get_latest_activities.py
src/strava_API/get_activities_process/: __init__.py  activity_api_request.py  activity_fetcher.py  filter_activities.py
src/strava_API/tokens_management/: access_token.py  generate_credentials.py  get_access_token.py  get_oauth_code.py  get_oauth_code_prueba.py  refresh_token.py  refresh_token_copy.py
src/strava_API/tokens_management/oauth_code_management/: ExtractCode.py  GetCode.py  click_authorize.py  extract_code.py  extract_code_selenium.py  get_code.py  get_oauth_code.py  login_into_strava.py  login_strava.py  strava_login.py  strava_login_code.py
src/strava_API/tokens_process/: __init__.py  access_token.py  generate_credentials.py  get_access_token.py  refresh_token.py  request_credentials.py
src/strava_API/tokens_process/oauth_code_process/: __init__.py  credentials.py  extract_code.py  get_oauth_code.py  login_strava.py
src/utils/: access_token.py  access_token_env.py  credentials.py  credentials_env.py  generate_credentials.py  get_oauth_code.py  ids_to_correct.py  load_env.py  load_env_var.py  logger.py  refresh_token.py  refresh_token_env.py  rerfersh_token.py  summary.py
tests/: conftest.py  test_credentials.py  test_extract_code.py  test_get_oauth_code.py  test_login_strava.py  test_summary.py
tests/fixtures/: credentials_fixtures.py  driver_fixtures.py
tests/test_activities/: test_strava_activity.py  test_summary.py
tests/test_credentials/: test_refresh_token.py  test_request_credentials.py
tests/test_login/: test_config.py  test_credentials.py  test_extract_code.py  test_get_oauth_code.py  test_login_strava.py
utils/: __init__.py  config.py  dom_elements.py  locators.py  logger.py  logging_config.py  web_element_handler.py
