[tool.poetry]
name = "correct-elevation-strava"
version = "0.1.0"
description = ""
authors = ["Alex Algarate <alex.algarate@gmail.com>"]
readme = "README.md"
packages = [{include = "correct_elevation_strava"}]

[tool.poetry.dependencies]
python = "^3.10.8"
pandas = "^2.2.2"
black = "^24.4.2"
selenium = "^4.21.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
pytest = "^8.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", ".dockerignore"]

[tool.pytest.ini_options]
addopts = "-v -ra --no-header"
testpaths = [
    ".tests/",
    "integration",
]

[tool.black]
line-length = 100
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| node_modules
)/
'''
target-version = ["py38", "py39", "py310", "py311"]
