[tool.poetry]
name = "correct-elevation-strava"
version = "0.1.0"
description = ""
authors = ["Alex Algarate <alex.algarate@gmail.com>"]
readme = "README.md"
packages = [{include = "correct_elevation_strava"}]

[tool.poetry.dependencies]
python = "^3.10.8"
pandas = "^2.2.2"
black = "^24.4.2"
selenium = "^4.21.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
pytest = "^8.2.1"
ruff = "^0.4.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", ".dockerignore"]

[tool.pytest.ini_options]
addopts = "-v -ra --no-header"
testpaths = [
    ".tests/",
    "integration",
]

[tool.black]
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| node_modules
)/
'''
target-version = ["py38", "py39", "py310", "py311"]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501", "B904"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,docs,tools}/*" = ["E402"]